# model-context-catalog

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fastmcp.json  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
docs/: cli.md  contrib.md  index.md  mcp.md  mtg.md  todo.md
docs/auth/: backends.md  overview.md  users-groups.md
docs/cli/: mcp.md  tool.md  user.md
docs/contrib/: archive.md  fs.md  http.md  index.md  system.md  text.md  time.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/stylesheets/: claude.css  orange.css
docs/tools/: env-vars.md  exec-templates.md  exec.md  limits.md  parameters.md  python.md  yaml-format.md
example/: example.py  tools.yaml
mcc/: __main__.py  app.py  auth.py  cache.py  cli.py  db.py  exec.py  loader.py  middleware.py  models.py  pyrunner.py  settings.py  settings.toml  settings.yaml  template.py  tools.yaml
mcc/auth/: __init__.py  backend.py  dangerous.py  db.py  dev.py  github_oauth.py  github_pat.py  models.py  util.py
mcc/cli/: __init__.py  mcp.py  tools.py  users.py
mcc/contrib/: archive.yaml  fs.py  fs.yaml  http.py  http.yaml  public.yaml  subprocess.py  system.py  system.yaml  text.yaml  time.py  time.yaml  tools.yaml
mcc/templates/: param_signature.md  tool_signature.md
mcc/tools/: admin.yaml  public.yaml
openspec/: project.md
openspec/changes/add-rbac-auth/: proposal.md
openspec/changes/jinja-exec-templates/: design.md  proposal.md  tasks.md
openspec/specs/catalog-loader/: spec.md
osint/: academic.yaml  companies.yaml  conflict.yaml  crypto.yaml  environment.yaml  geo.yaml  gov.yaml  infosec.yaml  mkdocs.yml  news.yaml  osint.env.example  osint.py  people.yaml  search.yaml  transport.yaml
osint/docs/: academic.md  companies.md  conflict.md  crypto.md  environment.md  geo.md  gov.md  index.md  infosec.md  news.md  people.md  search.md  transport.md
tests/: conftest.py  example.py  example_noisy.py  test_app.py  test_auth.py  test_exec.py  test_loader.py  test_mcp_features.py  test_pyrunner.py  test_signature.py  test_tool_index.py
tests/contrib/: test_archive.py  test_fs.py  test_subprocess.py  test_system.py  test_text.py  test_time.py
tests/fixtures/: tools_async.yaml  tools_cached.yaml  tools_env_var.yaml  tools_exec_envyaml.yaml  tools_exec_interpolate.yaml  tools_exec_limits.yaml  tools_exec_no_name.yaml  tools_exec_stdin.yaml  tools_exec_timeout.yaml  tools_file_env_block.yaml  tools_file_envfile.yaml  tools_grouped.yaml  tools_list_param.yaml  tools_missing_key.yaml  tools_multigroup.yaml  tools_no_description.yaml  tools_no_name.yaml  tools_no_params.yaml  tools_override.yaml  tools_public.yaml  tools_transform.yaml  tools_ungrouped.yaml
toolsets/: mkdocs.yml
toolsets/contrib/: archive.py  archive.yaml  cache.py  cache.yaml  fs.yaml  http.py  http.yaml  settings.yaml  subprocess.py  system.yaml  text.py  text.yaml  time.yaml
toolsets/docs/: academic.md  companies.md  conflict.md  index.md
toolsets/osint/: academic.yaml  conflict.py  conflict.yaml  crypto.yaml  environment.yaml  geo.yaml  gov.yaml  infosec.yaml  llms-full.md  mkdocs.yml  news.yaml  osint.env  osint.py  people.py  people.yaml  search.yaml  settings.yaml  transport.yaml
(+141 files in other folders)
