[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mcc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynaconf>=3.0",
    "elasticsearch[async]>=8.0",
    "fastembed>=0.4.0",
    "fastmcp>=3.2.0",
    "envyaml>=1.10",
    "pyyaml>=6.0",
    "rich-click>=1.8",
]

[project.scripts]
mcc = "mcc.cli:cli"

[tool.setuptools.packages.find]
include = ["mcc*"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
