[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "model-context-catalog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dynaconf>=3.0",
    "elasticsearch[async]>=8.0",
    "fastembed>=0.4.0",
    "fastmcp>=3.2.0",
    "envyaml>=1.10",
    "rich-click>=1.8",
    "aiofiles>=25.1.0",
    "jinja2>=3.1.6",
]

[project.scripts]
mcc = "mcc.cli:cli"

[tool.setuptools.packages.find]
include = ["mcc*"]

[tool.pytest.ini_options]
asyncio_mode = "auto" 

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "zensical>=0.0.31",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-aiofiles>=25.1.0.20251011",
]
