[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "model-context-catalog"
version = "0.1.1"
description = "An MCP server that exposes Python functions and shell commands as a permission-controlled tool catalog."
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "dynaconf>=3.0",
    "elasticsearch[async]>=8,<9",
    "fastembed>=0.4.0",
    "fastmcp>=3.2.0",
    "envyaml>=1.10",
    "rich-click>=1.8",
    "aiofiles>=25.1.0",
    "jinja2>=3.1.6",
    "cashews>=7.5.0",
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]
[project.urls]
Homepage = "https://c-research.github.io/model-context-catalog/"
Documentation = "https://c-research.github.io/model-context-catalog/"
Repository = "https://github.com/C-Research/model-context-catalog"
Issues = "https://github.com/C-Research/model-context-catalog/issues"

[project.optional-dependencies]
osint = [
    "sherlock-project>=0.14.3",
    "gdeltdoc>=1.4.0",
]

[project.scripts]
mcc = "mcc.cli:cli"

[tool.setuptools.packages.find]
include = ["mcc*"]

[tool.setuptools.package-data]
mcc = ["settings.yaml", "tools/*.yaml", "templates/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "smoke: fast tests that do not spawn subprocesses or hit external services",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "zensical>=0.0.31",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-aiofiles>=25.1.0.20251011",
]
